creando los archivos y carpetas

--- a/index.html
+++ b/index.html
@@ -12,6 +12,56 @@
 </head>
 
 <body>
+    <section>
+        <h1>Aplicando Grids</h1>
+        <div class="contenedor">
+            <div class="card uno">
+                <img src="./assets/imagenes/perrito_1.jpg" alt="primera imagen" width="100%">
+                <h2>PERRITO PRIMERO</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid quidem nulla est dignissimos? Voluptatibus itaque facere asperiores eaque autem impedit beatae, fuga dolore molestias? Iste quidem omnis vel enim illum.</p>
+                <div class="separador"></div>
+                <div class="rating">
+                    <i class="fa fa-solid fa-star"></i>
+                    <i class="fa fa-solid fa-star"></i>
+                    <i class="fa fa-solid fa-star"></i>
+                    <i class="fa fa-regular fa-star"></i>
+                    <i class="fa fa-regular fa-star"></i>
+                </div>
+                <button class="animation-bell">Link</button>
+            </div>
+
+            <div class="card dos">
+                <img src="./assets/imagenes/perrito_2.jpg" alt="primera imagen" width="100%">
+                <h2>PERRITO SEGUNDOO</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid quidem nulla est dignissimos? Voluptatibus itaque facere asperiores eaque autem impedit beatae, fuga dolore molestias? Iste quidem omnis vel enim illum.</p>
+                <div class="separador"></div>
+                <div class="rating">
+                    <i class="fa fa-solid fa-star"></i>
+                    <i class="fa fa-solid fa-star"></i>
+                    <i class="fa fa-solid fa-star"></i>
+                    <i class="fa fa-regular fa-star"></i>
+                    <i class="fa fa-regular fa-star"></i>
+                </div>
+                <button class="animation-bell">Link</button>
+            </div>
+
+            <div class="card tres">
+                <img src="./assets/imagenes/perrito_3.jpg" alt="primera imagen" width="100%">
+                <h2>PERRITO TERCERO</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid quidem nulla est dignissimos? Voluptatibus itaque facere asperiores eaque autem impedit beatae, fuga dolore molestias? Iste quidem omnis vel enim illum.</p>
+                <div class="separador"></div>
+                <div class="rating">
+                    <i class="fa fa-solid fa-star"></i>
+                    <i class="fa fa-solid fa-star"></i>
+                    <i class="fa fa-solid fa-star"></i>
+                    <i class="fa fa-regular fa-star"></i>
+                    <i class="fa fa-regular fa-star"></i>
+                </div>
+                <button class="animation-bell">Link</button>
+
+                <div></div>
+            </div>
+    </section>
 
 </body>
 
